--- a/debian.master/changelog
+++ b/debian.master/changelog
@@ -1,6 +1,6 @@
-linux (6.10.0-061000rc5.20240623170854) oracular; urgency=low
+linux (6.11.0-061100rc3.20240811142714) oracular; urgency=low
 
-  Mainline build at commit: v6.10-rc5
+  Mainline build at commit: v6.11.0-rc3 Sun Aug 11 14:27:14 2024 -0700
 
- -- Mainline Build <jens.glathe@oldschoolsolutions.biz>  Sun, 23 Jun 2024 17:08:54 +0200
+ -- Mainline Build <jens.glathe@oldschoolsolutions.biz>  Tue Aug 13 21:30:00 2024 +0200
 
